ansible/roles/r_jenkins/files/jenkins.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
  namespace: jenkins-namespace
  labels:
    app: app-jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-jenkins
  template:
    metadata:
      labels:
        app: app-jenkins
    spec:
      serviceAccount: jenkins-service-account
      containers:
      - name: jenkins-container
        image: jenkins/jenkins:lts
        ports:
          - name: http-port
            containerPort: 8080
          - name: jnlp-port
            containerPort: 50000
        volumeMounts:
          - name: jenkins-vol
            mountPath: /var/jenkins_vol
      volumes:
        - name: jenkins-vol
          emptyDir: {}
          #persistentVolumeClaim:
          #  claimName: jenkins-pvc
